--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React App</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <div id="app"></div>
-    <script src="index.bundle.js"></script>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="A simple React boilerplate">
+		<title>Bare React App</title>
+	</head>
+
+	<body>
+	  <div id="app"></div>
+		<noscript>
+            <p>You need Javascript enabled for this application to work</p>
+		</noscript>
+	</body>
 </html>
