--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
 	</head>
 
 	<body>
-	  <div id="app"></div>
-		<noscript>
-            <p>You need Javascript enabled for this application to work</p>
-		</noscript>
+	  <div id="app"
+	  ></div>
 	</body>
 </html>
